updating packages starting new home move old home

--- a/src/app/documentation/header/header.component.scss
+++ b/src/app/documentation/header/header.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles.scss';
+@import '../documentation.component.scss';
 
 .icon-boundry {
     // background-image: conic-gradient($pink, $purple, $yellow, $pink);
