--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,42 +1,6 @@
-<div class="content">
-  <div class="colors bright">
-    <h1 class="color-text">Ethan Fidl/er</h1>
-    <hr>
-    <h3>What is this site?</h3>
-    <p>This site will serve as my portfolio for <strong class="color-text">CS5167 User Interfaces</strong>, I currently don't have any content to share here but just wait and see!</p>
-    
-    <h3>Project 1 "Interface to a smart device"</h3>
-    <p>read the documentation <strong><a class="color-text" routerLink="documentation/project1">here!</a></strong></p>
-
-    <h3>Project 2 "Alterna-Canvas"</h3>
-    <p>read the documentation <strong><a class="color-text" routerLink="documentation/project2">here!</a></strong></p>
-
-    <h3>Project 3 "UC AR-Verse"</h3>
-    <p>read the documentation <strong><a class="color-text" routerLink="documentation/project3">here!</a></strong></p>
-
-    <h3>
-      Coming soon...
-    </h3>
-    <ul>
-      <li>
-        change positioning of header image
-      </li>
-      <li>
-        add dark mode button to header and add dark mode!
-      </li>
-      <li>
-        Resume Page
-      </li>
-      <li>
-        favicon
-      </li>
-      <li>
-        mobile support
-      </li>
-      <li>
-        other stufffffff
-      </li>
-    </ul>
+<div class="body-container">
+  <div id="backdrop">
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vulputate cursus aliquam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque rhoncus dolor sit amet dui tempus mattis. Curabitur cursus magna ut nunc dapibus, ut ullamcorper erat vehicula. Sed sed diam vel nulla luctus porttitor. Cras non nulla egestas, lacinia ipsum et, elementum ipsum. Duis eu eros viverra, finibus est vel, rhoncus arcu. Donec ac odio lorem. Ut id mattis diam. Praesent eros tellus, faucibus et ex vel, pharetra euismod neque. Vestibulum sed dui sit amet mi pulvinar pretium eget in nisl. Nam sed ultrices risus. Maecenas vitae neque eget velit egestas mollis. Fusce vel turpis at tortor feugiat luctus et in quam. Fusce odio turpis, posuere quis velit in, condimentum dignissim ex. Duis ultrices suscipit nulla, condimentum scelerisque sem ullamcorper sit amet. Pellentesque maximus ex id cursus rutrum. Nam efficitur sapien lectus, ut lacinia felis dignissim in. Etiam lectus ipsum, vehicula commodo facilisis vitae, rhoncus sed neque. Suspendisse <app-color-label color="a1b2c3" />, dolor ut luctus pharetra, massa erat mollis velit, et suscipit purus magna in augue. Etiam et consectetur tortor. Nam maximus nibh vitae convallis interdum. Proin in turpis dapibus, tincidunt enim et, fringilla felis. Etiam sed lorem fermentum, porttitor ante quis, luctus eros. Donec vel sem vel elit faucibus scelerisque. Nulla molestie mi ex, a faucibus nisl fringilla ac. Nam in dignissim augue, eget cursus lorem. Curabitur ac ornare purus. Etiam id ante faucibus dui auctor pulvinar nec at magna. Nulla sit amet velit et urna dignissim egestas non ut ligula. Donec dapibus ex in mollis scelerisque. Etiam mattis nisl ac sodales tempus. Nunc ac tortor lacus. Praesent fermentum erat aliquet vulputate scelerisque. Ut fringilla ornare enim. Etiam quis commodo quam. Aenean commodo nec urna sit amet iaculis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque rutrum nibh massa, nec dictum quam mollis ut. Ut ut ante neque. Quisque facilisis tincidunt massa et dignissim. Phasellus placerat libero quis elementum cursus. Sed non lectus auctor, ultrices erat ut, feugiat quam. Etiam non pulvinar justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin vulputate tortor dui, vel commodo massa tempor congue. Sed accumsan dolor bibendum lectus condimentum, et euismod turpis dictum. Nullam auctor massa ex, at volutpat est lacinia sit amet. Ut et blandit eros. Praesent at enim magna. Curabitur posuere sed dolor vel mattis. Ut auctor eleifend diam sit amet tristique. Aliquam vel nulla egestas, sodales est ornare, imperdiet lacus. Maecenas ac elit ac nibh elementum pretium. Nullam ac ex eget libero lobortis commodo. Nunc nulla libero, sagittis at dolor nec, suscipit porttitor magna. Fusce ipsum tortor, laoreet sed volutpat vehicula, sollicitudin vel nulla. Quisque a enim non purus facilisis molestie vel vitae leo. Sed eget tincidunt odio. Suspendisse mi nisl, varius vel tortor ullamcorper, bibendum ullamcorper tortor. Aenean et dolor tellus. Fusce molestie sodales nulla, nec aliquet felis. Quisque non volutpat eros, at iaculis diam. Vivamus ac pharetra lacus. Sed iaculis, est eget faucibus ullamcorper, tortor odio congue ex, sed pulvinar nibh lacus vehicula dui. Cras dignissim mattis mauris, et fermentum odio blandit id. Phasellus condimentum iaculis arcu vel fringilla. Praesent volutpat nulla ex, et aliquam tortor convallis nec. Pellentesque feugiat laoreet felis et blandit. Donec iaculis purus eu orci viverra ullamcorper. In vel sem lorem. Aliquam interdum mi non augue hendrerit tristique eu ac odio. Fusce elementum pretium enim, vel consectetur metus interdum id. Nullam ut nunc orci. Suspendisse arcu libero, vulputate et fringilla id, cursus vel enim. Cras quam dui, semper ut augue vel, ornare condimentum est. Sed gravida pellentesque turpis, vitae dictum nunc posuere a. Mauris quis ornare nisl. Sed blandit auctor feugiat. Etiam consequat cursus dictum. Nam ac ullamcorper dui, id pellentesque nisi. Aliquam varius pellentesque orci, nec laoreet velit luctus sit amet. Maecenas hendrerit magna vitae nisl imperdiet fermentum. Phasellus urna risus, tincidunt in risus in, sollicitudin aliquet nibh. Aenean sit amet pellentesque neque. Etiam vitae ante quis diam sollicitudin finibus at quis urna. Nulla vitae arcu eu ante ultricies vulputate. Vestibulum vitae accumsan ex, vitae interdum magna. Nunc consequat purus libero, sed vestibulum nisl lobortis sed. Vestibulum enim nibh, commodo ac volutpat vel, pharetra ac magna. Phasellus congue dui mi, ac volutpat purus scelerisque vel. Pellentesque laoreet purus ac magna varius cursus. </p>
   </div>
+  <h1 id="name">#ecf</h1> 
 </div>
-
