--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -7,6 +7,7 @@ $violet: #845a6d;
 
 .body-container {
     height: 100%;
+    min-height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
