--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@ $creme: #F9EBD2;
 
 @import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
 
+html, body {
+    height: 100%;
+}
+
 body {
     background-color: $creme;
     font-family: 'Titan One', cursive;
